--- a/gulpfile.config.json
+++ b/gulpfile.config.json
@@ -27,7 +27,7 @@
 		"tfs": false,
 		"server": {
 			"src": "./docs",
-			"path": "/",
+			"path": "/rxcomp-todomvc/",
 			"host": "0.0.0.0",
 			"port": 40998
 		}
