--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"author": "Luca Zampetti <lzampetti@gmail.com>",
 	"name": "todomvc",
 	"description": "todomvc",
-	"version": "1.0.0-alpha.2",
+	"version": "1.0.0-alpha.3",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -22,7 +22,7 @@
 	},
 	"dependencies": {
 		"rxjs": "~6.5.3",
-		"rxcomp": "1.0.0-alpha.2"
+		"rxcomp": "1.0.0-alpha.3"
 	},
 	"devDependencies": {
 		"@babel/core": "~7.6.4",
@@ -35,12 +35,11 @@
 		"babel-plugin-syntax-dynamic-import": "~6.18.0",
 		"babelify": "~10.0.0",
 		"browserify": "~16.5.0",
-		"common-shakeify": "~0.6.2",
 		"eslint": "~6.5.1",
 		"gulp": "~4.0.2",
 		"gulp-autoprefixer": "~7.0.1",
 		"gulp-babel": "~8.0.0-beta.2",
-		"gulp-better-rollup": "^4.0.1",
+		"gulp-better-rollup": "~4.0.1",
 		"gulp-concat": "~2.6.1",
 		"gulp-concat-util": "~0.5.5",
 		"gulp-cssmin": "~0.2.0",
@@ -52,9 +51,10 @@
 		"gulp-sass": "~4.0.2",
 		"gulp-terser": "~1.2.0",
 		"gulp-webserver": "~0.9.1",
-		"rollup": "^1.26.3",
-		"rollup-plugin-babel": "^4.3.3",
-		"rollup-plugin-node-resolve": "^5.2.0",
+		"rollup": "~1.26.3",
+		"rollup-plugin-babel": "~4.3.3",
+		"rollup-plugin-banner": "~0.2.1",
+		"rollup-plugin-license": "~0.12.1",
 		"tfs": "~1.6.0",
 		"through2": "~3.0.1",
 		"tsify": "~4.0.1",
