--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"author": "Luca Zampetti <lzampetti@gmail.com>",
 	"name": "todomvc",
 	"description": "todomvc",
-	"version": "1.0.0-beta.1",
+	"version": "1.0.0-beta.5",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -21,8 +21,8 @@
 		]
 	},
 	"dependencies": {
-		"rxjs": "~6.5.3",
-		"rxcomp": "1.0.0-beta.1"
+		"rxjs": "~6.5.4",
+		"rxcomp": "~1.0.0-beta.5"
 	},
 	"devDependencies": {
 		"@babel/core": "~7.6.4",
