--- a/package.json
+++ b/package.json
@@ -1,65 +1,21 @@
 {
-	"author": "Luca Zampetti <lzampetti@gmail.com>",
-	"name": "todomvc",
-	"description": "todomvc",
-	"version": "1.0.0-beta.5",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/actarian/todomvc.git"
-	},
-	"scripts": {
-		"start": "gulp"
-	},
-	"browserslist": {
-		"development": [
-			"last 1 version"
-		],
-		"production": [
-			"last 2 version",
-			"ie 11"
-		]
-	},
-	"dependencies": {
-		"rxjs": "~6.5.4",
-		"rxcomp": "~1.0.0-beta.5"
-	},
-	"devDependencies": {
-		"@babel/core": "~7.6.4",
-		"@babel/plugin-proposal-class-properties": "~7.5.5",
-		"@babel/plugin-proposal-object-rest-spread": "~7.6.2",
-		"@babel/plugin-transform-flow-strip-types": "~7.6.3",
-		"@babel/plugin-transform-modules-systemjs": "~7.5.0",
-		"@babel/preset-env": "~7.6.3",
-		"@babel/preset-typescript": "~7.6.0",
-		"babel-plugin-syntax-dynamic-import": "~6.18.0",
-		"babelify": "~10.0.0",
-		"browserify": "~16.5.0",
-		"eslint": "~6.5.1",
-		"gulp": "~4.0.2",
-		"gulp-autoprefixer": "~7.0.1",
-		"gulp-babel": "~8.0.0-beta.2",
-		"gulp-better-rollup": "~4.0.1",
-		"gulp-concat": "~2.6.1",
-		"gulp-concat-util": "~0.5.5",
-		"gulp-cssmin": "~0.2.0",
-		"gulp-filter": "~6.0.0",
-		"gulp-html2js": "~0.4.2",
-		"gulp-if": "~3.0.0",
-		"gulp-plumber": "~1.2.1",
-		"gulp-rename": "~1.4.0",
-		"gulp-sass": "~4.0.2",
-		"gulp-terser": "~1.2.0",
-		"gulp-webserver": "~0.9.1",
-		"rollup": "~1.26.3",
-		"rollup-plugin-babel": "~4.3.3",
-		"rollup-plugin-banner": "~0.2.1",
-		"rollup-plugin-license": "~0.12.1",
-		"tfs": "~1.6.0",
-		"through2": "~3.0.1",
-		"tsify": "~4.0.1",
-		"tslint": "~5.20.0",
-		"typescript": "~3.6.4",
-		"yargs": "~14.2.0"
-	}
+  "author": "Luca Zampetti <lzampetti@gmail.com>",
+  "name": "todomvc",
+  "description": "todomvc",
+  "version": "1.0.0-beta.9",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/actarian/todomvc.git"
+  },
+  "scripts": {
+    "start": "gulp"
+  },
+  "dependencies": {
+    "rxjs": "~6.5.4",
+    "rxcomp": "~1.0.0-beta.10"
+  },
+  "devDependencies": {
+    "gulpfile-config": "~1.0.0-alpha.9"
+  }
 }
